--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "debug": "~2.2.0",
     "ejs": "~2.4.1",
     "express": "~4.13.4",
+    "extend-light": "0.0.1",
+    "merge-light": "0.0.2",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
   },
- "devDependencies": {},
+  "devDependencies": {},
   "scripts": {
     "start": "node app",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["express"],
+  "keywords": [
+    "express"
+  ],
   "author": "LightSpeedC",
   "license": "MIT"
 }
