--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "extend-light": "0.0.1",
     "merge-light": "0.0.2",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "socket.io": "^1.4.8"
   },
   "devDependencies": {},
   "scripts": {
