--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "private": true,
   "main": "app.js",
   "dependencies": {
+    "babel-core": "^6.17.0",
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "ejs": "~2.4.1",
+    "elemental": "^0.6.1",
     "express": "~4.13.4",
     "extend-light": "0.0.1",
     "merge-light": "0.0.2",
     "morgan": "~1.7.0",
+    "react": "^15.3.2",
+    "react-addons-css-transition-group": "^15.3.2",
+    "react-dom": "^15.3.2",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.4.8"
   },
