--- a/package.json
+++ b/package.json
@@ -5,23 +5,32 @@
   "private": true,
   "main": "app.js",
   "dependencies": {
-    "babel-core": "^6.17.0",
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "ejs": "~2.4.1",
-    "elemental": "^0.6.1",
     "express": "~4.13.4",
     "extend-light": "0.0.1",
     "merge-light": "0.0.2",
     "morgan": "~1.7.0",
-    "react": "^15.3.2",
-    "react-addons-css-transition-group": "^15.3.2",
-    "react-dom": "^15.3.2",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.4.8"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-core": "^6.17.0",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.1.0",
+    "elemental": "^0.6.1",
+    "gulp": "^3.9.1",
+    "gulp-plumber": "^1.1.0",
+    "gulp-uglify": "^2.0.0",
+    "react": "^15.3.2",
+    "react-addons-css-transition-group": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "vinyl-source-stream": "^1.1.0"
+  },
   "scripts": {
     "start": "node app",
     "test": "echo \"Error: no test specified\" && exit 1"
