--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^15.3.2",
     "react-addons-css-transition-group": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-router": "^2.8.1",
     "vinyl-source-stream": "^1.1.0"
   },
   "scripts": {
