--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "socket.io": "^1.4.8"
   },
   "devDependencies": {
-    "babel-core": "^6.17.0",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "babelify": "^7.3.0",
@@ -26,10 +25,12 @@
     "gulp": "^3.9.1",
     "gulp-plumber": "^1.1.0",
     "gulp-uglify": "^2.0.0",
+    "literalify": "^0.4.0",
     "react": "^15.3.2",
     "react-addons-css-transition-group": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-router": "^2.8.1",
+    "reactify": "^1.1.1",
     "vinyl-source-stream": "^1.1.0"
   },
   "scripts": {
