--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "ejs": "~2.4.1",
     "express": "~4.13.4",
     "extend-light": "0.0.1",
+    "material-ui": "^0.16.0",
     "merge-light": "0.0.2",
     "morgan": "~1.7.0",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.4.8"
   },
@@ -31,6 +34,7 @@
     "react-addons-css-transition-group": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-router": "^2.8.1",
+    "react-tap-event-plugin": "^1.0.0",
     "reactify": "^1.1.1",
     "vinyl-source-stream": "^1.1.0"
   },
